feat(build): #411.19 apply_config_autoscaling_ci
- Add job and provisioner
- Remove old job
- Increase Autoscaling reuse in order to reduce
aws config prices


Former-commit-id: 65b7e8894435244f7566f093f55cc13b0487ac35

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -172,11 +172,6 @@ backup_analytics_timedoctor:
     refs: [schedules]
     variables: [$SCHEDULE_BACKUP_ANALYTICS_TIMEDOCTOR]
 
-infra_autoscaling_ci_deploy_config:
-  <<: *with_nix
-  <<: *in_master_branch
-  stage: deploy
-
 services_repositories_cache:
   <<: *with_nix
   tags: [autoscaling-large]
@@ -222,6 +217,11 @@ test_infra_autoscaling_ci:
   stage: build-and-test
 
 apply_infra_autoscaling_ci:
+  <<: *with_nix_2
+  <<: *in_master_branch
+  stage: deploy
+
+apply_config_autoscaling_ci:
   <<: *with_nix_2
   <<: *in_master_branch
   stage: deploy
