--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -174,7 +174,7 @@ backup_analytics_timedoctor:
 
 services_repositories_cache:
   <<: *with_nix
-  tags: [autoscaling-large]
+  tags: [autoscaling-repositories-cache]
   stage: analytics
   only:
     refs: [schedules]
