--- a/services/autoscaling-ci/config.toml
+++ b/services/autoscaling-ci/config.toml
@@ -125,12 +125,64 @@ check_interval = 20
     OffPeakIdleCount = 0
     OffPeakIdleTime = 1800
 
+[[runners]]
+  name = "autoscaling-repositories-cache"
+  limit = 10
+  url = "https://gitlab.com/"
+  token = "__autoscaling_token_3__"
+  executor = "docker+machine"
+  [runners.custom_build_dir]
+  [runners.docker]
+    tls_verify = false
+    image = "docker"
+    privileged = true
+    volumes = [
+      "/builds:/builds",
+      "/var/run/docker.sock:/var/run/docker.sock"
+    ]
+    disable_entrypoint_overwrite = false
+    oom_kill_disable = false
+    disable_cache = true
+    shm_size = 0
+  [runners.cache]
+    Type = "s3"
+    Path = "default"
+    Shared = true
+    [runners.cache.s3]
+      ServerAddress = "s3.amazonaws.com"
+      AccessKey = "__autoscaling_access_key__"
+      SecretKey = "__autoscaling_secret_key__"
+      BucketName = "autoscaling-ci-cache"
+      BucketLocation = "us-east-1"
+  [runners.machine]
+    IdleCount = 0
+    IdleTime = 0
+    MaxBuilds = 1
+    MachineDriver = "amazonec2"
+    MachineName = "autoscaling-repositories-cache-ci-%s"
+    MachineOptions = [
+      "amazonec2-request-spot-instance=true",
+      "amazonec2-spot-price=",
+      "amazonec2-access-key=__autoscaling_access_key__",
+      "amazonec2-secret-key=__autoscaling_secret_key__",
+      "amazonec2-region=us-east-1",
+      "amazonec2-tags=use,ci",
+      "amazonec2-vpc-id=vpc-0ea1c7bd6be683d2d",
+      "amazonec2-subnet-id=subnet-0bceb7aa2c900324a",
+      "amazonec2-zone=a",
+      "amazonec2-use-private-address=true",
+      "amazonec2-security-group=AutoscalingCISG",
+      "amazonec2-ami=ami-075b5fce6712726ed",
+      "amazonec2-instance-type=t2.medium",
+      "amazonec2-volume-type=gp2",
+      "amazonec2-root-size=50"
+    ]
 
 [[runners]]
   name = "autonomic"
   limit = 1000
   url = "https://gitlab.com/"
-  token = "__autoscaling_token_3__"
+  token = "__autoscaling_token_4__"
   executor = "docker+machine"
   [runners.custom_build_dir]
   [runners.docker]
