feat(build): #411.22 analytics infrastructure
- Add job and provisioner
- Remove old jobs


Former-commit-id: 00a3024718249c713cd3fcdc24591dfabb0df65f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,13 +67,6 @@ stages:
   <<: *with_nix_serial
   needs: []
 
-analytics_infrastructure:
-  <<: *with_nix
-  stage: analytics
-  only:
-    refs: [schedules]
-    variables: [$SCHEDULE_ANALYTICS_INFRASTRUCTURE]
-
 analytics_intercom:
   <<: *with_nix
   stage: analytics
@@ -202,6 +195,14 @@ analytics_services_toe:
   only:
     refs: [schedules]
     variables: [$SCHEDULE_ANALYTICS_CONTINUOUS_TOE]
+
+analytics_infrastructure:
+  <<: *with_nix_2
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_ANALYTICS_INFRASTRUCTURE]
 
 test_infra_monolith:
   <<: *with_nix_2
