feat(build): #411.24 analytics gitlab
- Add provisioner
- Remove old jobs


Former-commit-id: 35a739a5254d74e4ac2612d191383cc78cc45d1f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -206,6 +206,14 @@ analytics_mandrill:
     refs: [schedules]
     variables: [$SCHEDULE_ANALYTICS_MANDRILL]
 
+analytics_gitlab:
+  <<: *with_nix_2
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_ANALYTICS_GITLAB]
+
 test_infra_monolith:
   <<: *with_nix_2
   <<: *in_dev_branch
