--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
   "homepage": "https://fluidattacks.com/integrates",
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
+    "@expo/vector-icons": "10.2.0",
     "@types/react-native": "0.62.18",
     "@types/react-router-native": "5.1.0",
     "apollo-cache-inmemory": "1.6.6",
@@ -38,7 +39,7 @@
     "i18next": "19.5.6",
     "intl": "1.2.5",
     "lodash": "4.17.19",
-    "react": "16.13.1",
+    "react": "16.11.0",
     "react-i18next": "11.7.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-paper": "3.10.1",
