feat(back): #941.36 cfn secrets rotation
Former-commit-id: 6fcbec3313d72ca576fdccc167914ec9638606ee

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -224,6 +224,12 @@ Resources:
             Version: '2012-10-17'
           PolicyName: policy1
     Type: AWS::IAM::Role
+  rotation1:
+    Properties:
+      RotationLambdaARN: lambd
+      SecretId:
+        Ref: secret1
+    Type: AWS::SecretsManager::RotationSchedule
   s3Bucket:
     Properties:
       AccessControl: Private
