--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,26 +57,6 @@ stages:
     variables:
       - $SCHEDULE_USER_PROVISION_ROTATE_KEYS
 
-.with_nix_serial: &with_nix_serial
-  image: "${CI_REGISTRY_IMAGE}:nix"
-  tags: [autoscaling]
-  script:
-    - ./build.sh "${CI_JOB_NAME% *}"
-
-.with_nix: &with_nix
-  <<: *with_nix_serial
-  needs: []
-
-services_repositories_cache:
-  <<: *with_nix
-  tags: [autoscaling-analytics]
-  stage: analytics
-  only:
-    refs: [schedules]
-    variables: [$SCHEDULE_SERVICES_REPOSITORIES_CACHE]
-
-# Build 2
-
 .with_nix_2: &with_nix_2
   tags: [autoscaling]
   image: "${CI_REGISTRY_IMAGE}/nix:${CI_JOB_NAME}"
@@ -211,6 +191,14 @@ analytics_timedoctor_backup:
   only:
     refs: [schedules]
     variables: [$SCHEDULE_BACKUP_ANALYTICS_TIMEDOCTOR]
+
+analytics_services_repositories_cache:
+  <<: *with_nix_2
+  tags: [autoscaling-analytics]
+  stage: analytics
+  only:
+    refs: [schedules]
+    variables: [$SCHEDULE_SERVICES_REPOSITORIES_CACHE]
 
 test_infra_monolith:
   <<: *with_nix_2
