feat(back): #941.37 cfn trails not multiregion
Former-commit-id: cec8fbd000ad542a2e3ea02be53fa0ed0281a51c

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -272,6 +272,12 @@ Resources:
           IpProtocol: tcp
           ToPort: 8000
     Type: AWS::EC2::SecurityGroup
+  trail1:
+    Properties:
+      IsLogging: 'true'
+      IsMultiRegionTrail: 'true'
+      S3BucketName: bucketsito
+    Type: AWS::CloudTrail::Trail
   user1:
     Properties:
       Groups:
