fix(front): #3482 font size in the navbar
- Changed the size of the font in the navbar buttons to 18 px


Former-commit-id: 9643799bf09bf3b03bf3ee6312da342f2d9aa71f

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ postdeploy_release_email:
   needs: [deploy_production]
   except: [schedules]
 
-danger:
+.danger:
   tags: [autoscaling]
   stage: mr-check
   image: fluidattacks/danger-ruby
