fix(job): #480.1 copy missing data
- temporarily disables danger

Closes #480


Former-commit-id: 98f1ccb4b50bfc68dcdd8ed21ae622753497cddd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -394,7 +394,7 @@ test_commit_msg:
   <<: *in_dev_branch
   stage: test
 
-danger:
+.danger:
   image: fluidattacks/danger-ruby
   tags: [autoscaling]
   stage: mr-check
