feat(back): #941.38 cfn trails log validation
Former-commit-id: 523dfa716453ce97c6dc7ab74573d63824ea762c

--- a/test/static/cloudformation/safe/template.yaml
+++ b/test/static/cloudformation/safe/template.yaml
@@ -274,6 +274,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
   trail1:
     Properties:
+      EnableLogFileValidation: 'true'
       IsLogging: 'true'
       IsMultiRegionTrail: 'true'
       S3BucketName: bucketsito
