feat(front): #2220.17 add download button
Former-commit-id: 8d4b1575b24e8860599ad637d9e7879e70db1f14

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -498,7 +498,7 @@ lint_commit_msg:
   <<: *in_dev_and_master_branch
   stage: lint-code
 
-.danger:
+danger:
   <<: *in_mrs
   tags: [autoscaling]
   needs: []
