--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,13 +12,22 @@ stages:
   - subscriptions
   - external
 
-.in_everywhere_except_periodic_jobs: &in_everywhere_except_periodic_jobs
-  except:
-    refs:
-      - schedules
-    variables:
-      - $analytics
-      - $build_nix_caches
+.commit_stages:
+  - &integrates_commit_pattern '$CI_COMMIT_TITLE =~ /^integrates/ || $CI_COMMIT_TITLE =~ /^all/'
+  - &forces_commit_pattern '$CI_COMMIT_TITLE =~ /^forces/ || $CI_COMMIT_TITLE =~ /^all/'
+  - &all_commit_pattern '$CI_COMMIT_TITLE =~ /^forces/ || $CI_COMMIT_TITLE =~ /^integrates/ || $CI_COMMIT_TITLE =~ /^all/'
+
+.in_everywhere_except_periodic_jobs_and_mrs_integrates: &in_everywhere_except_periodic_jobs_and_mrs_integrates
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: '$analytics != null'
+      when: never
+    - if: '$build_nix_caches != null'
+      when: never
+    - if: *integrates_commit_pattern
 
 .in_master_except_periodic_jobs: &in_master_except_periodic_jobs
   only:
@@ -150,7 +159,7 @@ subscriptions_trigger_user_to_entity_report_prod_schedule:
 
 build_front:
   <<: *with_nix
-  <<: *in_everywhere_except_periodic_jobs
+  <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
   stage: build
   retry: 1
   artifacts:
@@ -237,7 +246,7 @@ deploy_k8s_stop_ephemeral:
 
 deploy_mobile_ota:
   <<: *with_nix
-  <<: *in_everywhere_except_periodic_jobs
+  <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
   stage: deploy-app
   tags: [autoscaling-large]
 
@@ -262,7 +271,7 @@ deploy_permissions_matrix:
 
 build_container_app:
   <<: *with_nix
-  <<: *in_everywhere_except_periodic_jobs
+  <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
   stage: build
   retry: 1
   artifacts:
@@ -287,7 +296,7 @@ build_nix_caches:
 
 deploy_front:
   <<: *with_nix
-  <<: *in_everywhere_except_periodic_jobs
+  <<: *in_everywhere_except_periodic_jobs_and_mrs_integrates
   stage: deploy-app
   needs: [build_front]
 
@@ -508,7 +517,10 @@ forces_dynamic:
 
 lint_commit_msg:
   <<: *with_nix
-  <<: *in_dev_and_master_branch
+  except:
+    refs:
+      - schedules
+      - triggers
   stage: lint-code
 
 danger:
@@ -520,8 +532,8 @@ danger:
   variables:
     DANGER_GITLAB_API_TOKEN: $DANGER_TOKEN
   before_script:
-    - curl -LOJ https://static-objects.gitlab.net/fluidattacks/public/raw/master/commitlint-configs/others/parser-preset.js
-    - curl -LOJ https://static-objects.gitlab.net/fluidattacks/public/raw/master/commitlint-configs/others/commitlint.config.js
+    - curl -LOJ https://static-objects.gitlab.net/fluidattacks/public/raw/master/commitlint-configs/integrates/parser-preset.js
+    - curl -LOJ https://static-objects.gitlab.net/fluidattacks/public/raw/master/commitlint-configs/integrates/commitlint.config.js
     - export CI_MERGE_REQUEST_ID=$(git ls-remote -q origin merge-requests\*\head
       | grep ${CI_COMMIT_SHA}
       | sed 's/.*refs\/merge-requests\/\([0-9]*\)\/head/\1/g')
