refac(front): #1719.23  lint data_table_next
- Erase unused onClickRow prop.
- Erase unused onTableChange prop.
- Lint types file.


Former-commit-id: e34fa8f1fa6e8dd479d96bff1f4250add27e4d2f

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -84,7 +84,15 @@
         "selector": "interface",
         "format": ["PascalCase"],
         "prefix": ["I"],
-        "suffix": ["Props", "Fn"]
+        /*
+         * [suffix]: "Shape for..."
+         *
+         * Attr: GraphQL query or mutation attributes.
+         * Config: Object use for configuration purposes.
+         * Fn: Functional type.
+         * Props: React functional component props.
+         */
+        "suffix": ["Attr", "Config", "Fn", "Props"]
       }
     ],
     /*
