refac(front): #1719.24 change i_header name
Former-commit-id: df813b69e9eea87108be2ac729e7ba88de07f735

--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -89,7 +89,7 @@
          *
          * Attr: GraphQL query or mutation attributes.
          * Config: Object use for configuration purposes.
-         * Fn: Functional type.
+         * Fn: Function type.
          * Props: React functional component props.
          */
         "suffix": ["Attr", "Config", "Fn", "Props"]
