test(back): #2220.25 subscriptions
Former-commit-id: 838a132b723294527242b1ac3030bcdaa52df51f

--- a/.gitignore
+++ b/.gitignore
@@ -81,12 +81,14 @@ django-apps/**/dist
 
 # Build system
 /build/coverage
+/build/provisioners/test.nix
 /coverage.xml
 /dump.rdb
 /geckodriver.log
 /lambda/.venv.*
 /TEMP_FD
 /test
+/test.py
 /test_async/dynamo_data/bb_executions.json.now
 /version.txt
 /.coverage*
