integrates\style(front): #1719.26 lint translations files
Former-commit-id: d36b12c9c40830ed57975593d9b56e9459ab1319

--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -2,7 +2,11 @@
 
 src/resources/
 src/scenes/
-src/styles/
-src/typings/
-src/utils/
+src/utils/authz
+src/utils/forms
+src/utils/hooks
+src/utils/secureStore
+src/utils/*.ts
+src/utils/*.tsx
 src/**/*.css.d.ts
+src/**/*.d.ts
